atualização na exibição da tabbela

--- a/MODULOS/CADASTRO_JOGOS/public/style.css
+++ b/MODULOS/CADASTRO_JOGOS/public/style.css
@@ -104,6 +104,9 @@ table{
 .styled-table td {
     padding: 12px 15px;
     border: 1px solid #dddddd;
+    max-width: 200px;
+    word-wrap: break-word;
+    white-space: normal;
 }
 
 .styled-table tbody tr {
