--- a/MODULOS/SEÇÃO-TUTORIAL/styles.css
+++ b/MODULOS/SEÇÃO-TUTORIAL/styles.css
@@ -43,17 +43,6 @@ p {
     padding: 10px 20px;
 }
 
-.video-thumb {
-    width: 100%;
-    max-width: 320px;
-    /* Largura máxima das thumbs */
-    height: 180px;
-    /* Altura padrão (16:9) */
-    object-fit: cover;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
-}
 
 .video-thumb:hover {
     transform: scale(1.03);
@@ -89,10 +78,15 @@ p {
 }
 
 .video-thumb {
-    width: 150px;
-    height: 150px;
-    object-fit: contain;
+    width: 100%;
+    max-width: 320px;
+    height: 180px;
+    object-fit: cover;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
 }
+
 .Logo_PDF{
     display: block;
      width: 100px;
@@ -121,4 +115,40 @@ p {
     align-items: center;
     gap: 8px;
     text-align: center;
+}
+/*Parte da responsividade*/
+@media (max-width: 768px) {
+    .card-content {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .Logo_APPs,
+    .video-thumb,
+    .Logo_PDF {
+        width: 80px;
+        height: 80px;
+    }
+
+    .middle-content {
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .pdf_conteiner {
+        flex-direction: column;
+        gap: 4px;
+    }
+
+    .card {
+        padding: 10px;
+    }
+
+    .video-thumb {
+        width: 100%;
+        max-width: 300px;
+        height: auto;
+    }
 }
