--- a/public/style.css
+++ b/public/style.css
@@ -104,7 +104,7 @@ button:hover {
   border: none;
   height: 110px;
   width: 110px;
-  font-size: 15px;
+  font-size: 12px;
   border-radius: 20px;
   display: flex;
   align-items: center;
@@ -132,4 +132,16 @@ button:hover {
   box-shadow: inset 0 0 14px rgba(2, 119, 189, 0.4);
   cursor: default;
   font-weight: 700;
+}
+#toggle-music {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #072143;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 16px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
 }
