--- a/codigo/public/modulos/caca-palavras/style.css
+++ b/codigo/public/modulos/caca-palavras/style.css
@@ -9,7 +9,7 @@ body {
   min-height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
   overflow: hidden;
-  font-size: 14px; /* Fonte reduzida globalmente */
+  font-size: 14px; 
 }
 
 .navbar {
@@ -85,7 +85,7 @@ main {
   align-items: center;
   width: 28px;
   height: 26px;
-  font-size: 13px; /* Fonte um pouco menor */
+  font-size: 13px; 
   font-weight: bold;
   color: #111;
   background-color: #fff;
@@ -118,7 +118,7 @@ main {
   border-radius: 1em;
 }
 
-.levelTitle,
+#levelTitle,
 .listTitle {
   margin: 0.5em 0;
   width: 100%;
@@ -143,7 +143,6 @@ main {
   border-radius: 4px;
 }
 
-/* --------- Responsividade para telas maiores (desktop) --------- */
 @media(min-width: 768px) {
   main {
     flex-direction: row;
@@ -177,7 +176,7 @@ main {
         height: 36px;
     }
 
-    .levelTitle,
+    #levelTitle,
     .listTitle {
         font-size: 1.5em;
     }
