layout do index html pronto

--- a/codigo/public/assets/css/secaoHistoria.css
+++ b/codigo/public/assets/css/secaoHistoria.css
@@ -22,6 +22,7 @@
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
     position: relative;
     color: #123456;
+    background-color: white;
 }
 
 .slider {
