--- a/codigo/public/assets/css/caca-palavras.css
+++ b/codigo/public/assets/css/caca-palavras.css
@@ -309,7 +309,7 @@ main {
   }
 
   .procura-palavras {
-    padding: 15px 0;
+    padding: 5px 0;
     order: 2;
     width: 100%;
     max-width: 100%;
@@ -339,5 +339,32 @@ main {
 
   #containerCacaPalavras {
     grid-template-columns: repeat(15, 21px);
+  }
+}
+
+/* Centralização dos containers no desktop */
+@media screen and (min-width: 992px) {
+  main {
+    max-width: 1100px;
+    margin: 0 auto;
+  }
+
+  .procura-palavras,
+  .ranking-section {
+    width: 100%;
+  }
+
+  .ranking-section {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 1em;
+  }
+
+  .ranking-box {
+    flex: 1 1 48%;
+    background-color: #fefdfb;
+    border-radius: 1em;
+    padding: 1em;
   }
 }
